build(ai): 移除 Kotlin HTTP 运行依赖